Fixed `overview.BlockWeightt` having a typo.
Former-commit-id: d641e29bbdfc31810309525cf3a1606bc0ea6c2e

--- a/app/languages/de.json
+++ b/app/languages/de.json
@@ -1,7 +1,7 @@
 {
   "overview.TrustWeight": "Trust Faktor",
   "overview.LicensceAgreement": "Lizenzvereinbarung",
-  "overview.BlockWeightt": "Block Faktor",
+  "overview.BlockWeight": "Block Faktor",
   "overview.Balance": "Kontostand",
   "overview.EncryptedModal": "Ihre Wallet ist nicht verschlüsselt!",
   "overview.Suggestion": "Damit Ihr Nexus sicher ist, sollten Sie Ihre Wallet verschlüsseln.",
