--- a/app/languages/nl.json
+++ b/app/languages/nl.json
@@ -1,7 +1,7 @@
 {
   "overview.TrustWeight": "Trust Gewicht",
   "overview.LicensceAgreement": "Licentieovereenkomst",
-  "overview.BlockWeightt": "Block Gewicht",
+  "overview.BlockWeight": "Block Gewicht",
   "overview.Balance": "Balans",
   "overview.EncryptedModal": "Uw portemonnee is niet gecodeerd!",
   "overview.Suggestion": "U dient uw portemonnee te versleutelen om uw NXS veilig te houden.",
