--- a/app/languages/ru.json
+++ b/app/languages/ru.json
@@ -1,7 +1,7 @@
 {
   "overview.TrustWeight": "Вес доверия",
   "overview.LicensceAgreement": "Лицензионное соглашение",
-  "overview.BlockWeightt": "Вес блока",
+  "overview.BlockWeight": "Вес блока",
   "overview.Balance": "Баланс",
   "overview.EncryptedModal": "Ваш кошелек не зашифрован!",
   "overview.Suggestion": "Вы должны зашифровать ваш кошелек. Защитите свой NXS",
