Fixed typo in `sendReceive.CopyToFeild`
Former-commit-id: d40e42b39489655a8017ec879fde5da6ca8e2ff2

--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -56,7 +56,7 @@
   "sendReceive.Total": "TOTAL",
   "sendReceive.From": "FROM",
   "sendReceive.FEE": "Fee",
-  "sendReceive.CopyToFeild": "Copy to field",
+  "sendReceive.CopyToField": "Copy to field",
   "sendReceive.ClickToEdit": "Click to edit",
   "sendReceive.SelectAnAccount": "Select an account",
   "sendReceive.FromAccount": "From account",
