--- a/app/languages/es.json
+++ b/app/languages/es.json
@@ -55,7 +55,7 @@
   "sendReceive.Total": "TOTAL",
   "sendReceive.From": "DESDE",
   "sendReceive.FEE": "TARIFA",
-  "sendReceive.CopyToFeild": "Copiar celda",
+  "sendReceive.CopyToField": "Copiar celda",
   "sendReceive.ClickToEdit": "Haz clic para editar",
   "sendReceive.SelectAnAccount": "Seleccione una cuenta",
   "sendReceive.FromAccount": "Desde la cuenta",
