--- a/app/languages/ja.json
+++ b/app/languages/ja.json
@@ -45,7 +45,7 @@
   "sendReceive.Total": "合計",
   "sendReceive.From": "から",
   "sendReceive.FEE": "費用",
-  "sendReceive.CopyToFeild": "フィールドにコピー",
+  "sendReceive.CopyToField": "フィールドにコピー",
   "sendReceive.ClickToEdit": "クリックして編集する",
   "sendReceive.SelectAnAccount": "アカウントを選択",
   "sendReceive.FromAccount": "アカウントから",
