--- a/app/languages/nl.json
+++ b/app/languages/nl.json
@@ -46,7 +46,7 @@
   "sendReceive.Total": "TOTAAL",
   "sendReceive.From": "VAN",
   "sendReceive.FEE": "Honorarium",
-  "sendReceive.CopyToFeild": "Kopiëren naar veld",
+  "sendReceive.CopyToField": "Kopiëren naar veld",
   "sendReceive.ClickToEdit": "Klik om te bewerken",
   "sendReceive.SelectAnAccount": "Selecteer een Account",
   "sendReceive.FromAccount": "Van Account",
