--- a/app/languages/de.json
+++ b/app/languages/de.json
@@ -46,7 +46,7 @@
   "sendReceive.Total": "GESAMT",
   "sendReceive.From": "VON",
   "sendReceive.FEE": "GEBÜHR",
-  "sendReceive.CopyToFeild": "In das Feld kopieren",
+  "sendReceive.CopyToField": "In das Feld kopieren",
   "sendReceive.ClickToEdit": "Zum Bearbeiten anklicken",
 
   "sendReceive.SelectAnAccount": "Wählen Sie ein Konto aus",
