--- a/app/languages/en.json
+++ b/app/languages/en.json
@@ -91,6 +91,7 @@
   "transactions.Trust": "Trust",
   "transactions.Generate": "Generate",
   "transactions.Immature": "Immature",
+  "transactions.Orphan": "Orphan",
   "transactions.Stake": "Stake",
   "transactions.MinimumAmount": "Min amount",
   "transactions.TimeSpan": "Time Span",
