--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -536,7 +536,7 @@
   "Alert.NoSecondAccountChosen": "No second account chosen",
   "Alert.InsufficientFunds": "Insufficient funds",
   "Alert.ManualDaemonDown": "Manual daemon is down",
-  "Alert.ClosingNexus": "Closing Nexus wallet",
+  "Alert.ClosingNexus": "Closing Nexus Wallet",
 
   "Cp.AC1": "Accent Color 1",
   "Cp.AC2": "Accent Color 2",
