reworded daemon -> core
Former-commit-id: e7181682f0192f49333e6427df6ed8023ea504ab

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -111,7 +111,7 @@
   "transactions.Received": "Received",
   "transactions.AMOUNT": "Amount: ",
   "transactions.TIME": "Time: ",
-  "transactions.Loading": "Loading wallet, please wait",
+  "transactions.Loading": "Connecting to Nexus Core",
   "transactions.MyAddress": "My Address",
   "transactions.Page": "Page",
   "transactions.Rows": "Rows",
@@ -194,7 +194,7 @@
   "AddressBook.Addresses": "Addresses",
   "AddressBook.MyAccount": "My Account",
   "AddressBook.EnterAddressName": "Enter address name",
-  "AddressBook.Loading": "Loading wallet, please wait",
+  "AddressBook.Loading": "Connecting to Nexus Core",
   "AddressBook.NoContacts": "No contacts",
   "AddressBook.NXSAddress": "NXS address",
   "AddressBook.NexusAddresses": "NXS addresses",
@@ -261,10 +261,10 @@
   "Settings.DeveloperMode": "Developer mode",
   "Settings.BackupWallet": "Backup wallet",
   "Settings.StartUp": "Start at system startup",
-  "Settings.ChangesNexTime": "Changes to core settings will take effect the next time the core is restarted.",
-  "Settings.ManualDaemonEntry": "Enter manual daemon mode?",
-  "Settings.ManualDaemonExit": "Exit manual daemon mode?",
-  "Settings.ManualDaemonWarning": "(This will shut down your daemon)",
+  "Settings.ChangesNexTime": "Changes to Core settings will take effect the next time the Core is restarted.",
+  "Settings.ManualDaemonEntry": "Enter manual Core mode?",
+  "Settings.ManualDaemonExit": "Exit manual Core mode?",
+  "Settings.ManualDaemonWarning": "(This will shut down your Core)",
   "Settings.Username": "Username",
   "Settings.AutoUpdate": "Auto update (Recommended)",
   "Settings.AutoUpdateNote": "Automatically check for new versions and notify if a new version is available.",
@@ -272,11 +272,11 @@
   "Settings.DisableAutoUpdateNote": "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.",
   "Settings.KeepAutoUpdate": "Keep auto update On",
   "Settings.TurnOffAutoUpdate": "Turn auto update Off",
-  "Settings.DaemonLoading": "Loading wallet, please wait",
+  "Settings.DaemonLoading": "Connecting to Nexus Core",
   "Settings.SettingsSaved": "Settings saved",
   "Settings.SavingSettings": "Saving settings...",
   "Settings.SaveSettings": "Save settings",
-  "Settings.RestartingDaemon": "Restarting daemon...",
+  "Settings.RestartingDaemon": "Restarting Nexus Core...",
   "Settings.PrivKeyImported": "Private key imported. Rescanning now",
   "Settings.Rescanning": "Rescanning...",
   "Settings.RescanningDone": "Rescanning done",
@@ -294,13 +294,13 @@
   "Settings.EnforceOpenSourceModulesNote": "Only modules which have valid open source repositories are allowed to be installed and run. You can disable this option to test run the modules that you're developing",
   "Settings.FakeTransactions": "Fake Test Transactions",
   "Settings.FakeTransactionsNote": "Display Test Transactions on the Transactions page",
-  "Settings.ReqiresRestart": "This setting change will only take effect after core is restarted. Do you want to restart the core now?",
-  "Settings.RestartDaemon": "Restart core?",
+  "Settings.ReqiresRestart": "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?",
+  "Settings.RestartDaemon": "Restart Core?",
 
-  "Settings.Errors.ManualDaemonUser": "Manual daemon username is required",
-  "Settings.Errors.ManualDaemonPassword": "Manual daemon password is required",
-  "Settings.Errors.ManualDaemonIP": "Manual daemon IP is required",
-  "Settings.Errors.ManualDaemonPort": "Manual daemon port is required",
+  "Settings.Errors.ManualDaemonUser": "Manual Core username is required",
+  "Settings.Errors.ManualDaemonPassword": "Manual Core password is required",
+  "Settings.Errors.ManualDaemonIP": "Manual Core IP is required",
+  "Settings.Errors.ManualDaemonPort": "Manual Core port is required",
   "Settings.Errors.ManualDaemonDataDir": "Data directory is required",
   "Settings.Errors.Socks4PoxyIP": "SOCKS4 proxy IP is required",
   "Settings.Errors.Socks4PoxyPort": "SOCKS4 proxy port is required",
@@ -333,7 +333,7 @@
 
   "Settings.IpAddress": "IP address",
   "Settings.Port": "Port",
-  "Settings.RestartCore": "Restart core",
+  "Settings.RestartCore": "Restart Core",
   "Settings.Language": "Language",
   "Settings.English": "English",
   "Settings.Russian": "Russian",
@@ -377,7 +377,7 @@
   "Settings.EnableMining": "Enable mining",
   "Settings.EnableStaking": "Enable staking",
   "Settings.VerboseLevel": "Verbose level",
-  "Settings.ManualDaemonMode": "Manual daemon mode",
+  "Settings.ManualDaemonMode": "Manual Core mode",
   "Settings.DDN": "Data directory name",
   "Settings.ChangePassword": "Change password",
   "Settings.PreviousPassword": "Previous password",
@@ -467,7 +467,7 @@
   "Header.Synced": "Synchronized",
   "Header.Syncing": "Synchronizing: {percent}%",
   "Header.Blocks": "Blocks",
-  "Header.DaemonNotLoaded": "Daemon not loaded",
+  "Header.DaemonNotLoaded": "Nexus Core is not connected",
 
   "ToolTip.GettingNextBlock": "Getting next block...",
   "ToolTip.SystemStartUP": "Automatically start the wallet when you log into your system.",
@@ -481,13 +481,13 @@
   "ToolTip.EnableStaking": "Enable/Disable staking on the wallet.",
   "ToolTip.Verbose": "Verbose level for logs.",
   "ToolTip.ForkBlock": "Step back a amount of blocks.",
-  "ToolTip.MDM": "Enable manual daemon mode if you are running the Daemon manually outside of the wallet.",
-  "ToolTip.UserName": "Username configured for manual daemon.",
+  "ToolTip.MDM": "Enable manual Core mode if you are running the Nexus Core manually outside of the wallet.",
+  "ToolTip.UserName": "Username configured for manual Core.",
   "ToolTip.ConnectionFailure": "Connection Failure",
-  "ToolTip.Password": "Password configured for manual daemon.",
-  "ToolTip.IP": "IP address configured for manual daemon.",
-  "ToolTip.PortConfig": "Port configured for manual daemon.",
-  "ToolTip.DataDirectory": "Data directory configured for manual daemon.",
+  "ToolTip.Password": "Password configured for manual Core.",
+  "ToolTip.IP": "IP address configured for manual Core.",
+  "ToolTip.PortConfig": "Port configured for manual Core.",
+  "ToolTip.DataDirectory": "Data directory configured for manual Core.",
   "ToolTip.RenderGlobe": "Render the globe on the Overview page.",
   "ToolTip.RenderGlobeOpenGLFail": "Your computer does not support OPENGL 2.0",
   "ToolTip.TryAgain": "Try again?",
@@ -529,13 +529,13 @@
   "Alert.IncorrectPasssword": "Incorrect passsword",
   "Alert.CoreSettingsSaved": "Core settings saved",
   "Alert.ContactsExported": "Contacts exported",
-  "Alert.DaemonLoadingWait": "Loading wallet, please wait",
+  "Alert.DaemonLoadingWait": "Connecting to Nexus Core",
   "Alert.nodefaultname": "Account cannot be named * or default",
   "Alert.CoreRestarting": "Core restarting",
   "Alert.AccountsAreTheSame": "Accounts are the same",
   "Alert.NoSecondAccountChosen": "No second account chosen",
   "Alert.InsufficientFunds": "Insufficient funds",
-  "Alert.ManualDaemonDown": "Manual daemon is down",
+  "Alert.ManualDaemonDown": "Manual Core is down",
   "Alert.ClosingNexus": "Closing Nexus Wallet",
 
   "Cp.AC1": "Accent Color 1",
