--- a/translations/nl-changes.json
+++ b/translations/nl-changes.json
@@ -65,7 +65,7 @@
   "Settings.OverviewDisplay": "Overview Display",
   "Settings.AutoUpdateNote": "Automatically check for new versions and notify if a new version is available",
   "Settings.DisableAutoUpdateNote": "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience",
-  "Settings.DaemonLoading": "Loading wallet, please wait",
+  "Settings.DaemonLoading": "Connecting to Nexus Core",
   "Settings.SettingsSaved": "Settings Saved",
   "Settings.SavingSettings": "Saving Settings...",
   "Settings.RestartingDaemon": "Restarting daemon...",
