--- a/translations/ru-changes.json
+++ b/translations/ru-changes.json
@@ -72,7 +72,7 @@
   "Settings.DisableAutoUpdateNote": "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience",
   "Settings.KeepAutoUpdate": "Keep Auto Update On",
   "Settings.TurnOffAutoUpdate": "Turn Auto Update Off",
-  "Settings.DaemonLoading": "Loading wallet, please wait",
+  "Settings.DaemonLoading": "Connecting to Nexus Core",
   "Settings.SettingsSaved": "Settings Saved",
   "Settings.SavingSettings": "Saving Settings...",
   "Settings.RestartingDaemon": "Restarting daemon...",
