small wording change
Former-commit-id: 5428ae3d832a423a594020f98d105981a517ad9b

--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -535,7 +535,7 @@
   "Alert.AccountsAreTheSame": "Accounts are the same",
   "Alert.NoSecondAccountChosen": "No second account chosen",
   "Alert.InsufficientFunds": "Insufficient funds",
-  "Alert.ManualDaemonDown": "Manual Core is down",
+  "Alert.ManualDaemonDown": "Manual Core is disconnected",
   "Alert.ClosingNexus": "Closing Nexus Wallet",
 
   "Cp.AC1": "Accent Color 1",
