--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -168,7 +168,7 @@
   "AddressBook.Export": "Export contacts",
   "AddressBook.Import": "Import contacts",
   "AddressBook.SearchContact": "Search contact",
-  "AddressBook.MyAddresses": "My addresses",
+  "AddressBook.MyAddresses": "My Addresses",
   "AddressBook.CreateContact": "Create contact",
   "AddressBook.NewContact": "New contact",
   "AddressBook.Name": "Name",
