updated pluralization usage
Former-commit-id: fde5594db0f885f23d4d1ef91e0710a86cd641d0

--- a/assets/languages/de.json
+++ b/assets/languages/de.json
@@ -159,8 +159,7 @@
   "Click address to copy": "Klicken Sie auf Kopieren",
   "Back": "Zurück",
   "Their addresses": "Ihre Adressen",
-  "%{count} address": null,
-  "%{count} addresses": null,
+  "%{count} address |||| %{count} addresses": null,
   "Addresses": "Adressen",
   "Enter address name": "Geben Sie den Name der Adresse ein",
   "No contacts": "Keine Kontakte",
