--- a/assets/languages/es.json
+++ b/assets/languages/es.json
@@ -159,8 +159,7 @@
   "Click address to copy": "Haga clic en la dirección para copiar",
   "Back": "Atrás",
   "Their addresses": "Sus direcciones",
-  "%{count} address": "%{count} address",
-  "%{count} addresses": "%{count} address",
+  "%{count} address |||| %{count} addresses": "%{count} address |||| %{count} address",
   "Addresses": "Direcciones",
   "Enter address name": "Introduzca el nombre de la dirección",
   "No contacts": "Sin contactos",
