--- a/assets/languages/fr.json
+++ b/assets/languages/fr.json
@@ -159,8 +159,7 @@
   "Click address to copy": "Cliquer l'adresse pour copier",
   "Back": "Retour",
   "Their addresses": "Leurs adresses",
-  "%{count} address": "%{nombre} Adresse",
-  "%{count} addresses": "%{nombre} Adresses",
+  "%{count} address": "%{nombre} Adresse |||| %{nombre} Adresses",
   "Addresses": "Adresses",
   "Enter address name": "Saisir le nom de l'adresse",
   "No contacts": "Pas de contacts",
