--- a/assets/languages/ja.json
+++ b/assets/languages/ja.json
@@ -159,8 +159,7 @@
   "Click address to copy": "クリックしてコピーする",
   "Back": "バック",
   "Their addresses": "アドレス",
-  "%{count} address": null,
-  "%{count} addresses": null,
+  "%{count} address |||| %{count} addresses": null,
   "Addresses": "アドレス",
   "Enter address name": "住所の名前を入力してください",
   "No contacts": "連絡先なし",
