--- a/assets/languages/ko.json
+++ b/assets/languages/ko.json
@@ -159,8 +159,7 @@
   "Click address to copy": "클릭 복사",
   "Back": "돌아 가라",
   "Their addresses": "주소",
-  "%{count} address": null,
-  "%{count} addresses": null,
+  "%{count} address |||| %{count} addresses": null,
   "Addresses": "구애",
   "Enter address name": "주소 이름 입력",
   "No contacts": "연락처 없음",
