--- a/assets/languages/nl.json
+++ b/assets/languages/nl.json
@@ -159,8 +159,7 @@
   "Click address to copy": "Klik Op Adres Om Te Kopiëren",
   "Back": "Terug",
   "Their addresses": "Hun Adressen",
-  "%{count} address": null,
-  "%{count} addresses": null,
+  "%{count} address |||| %{count} addresses": null,
   "Addresses": "Adressen",
   "Enter address name": "Geef Adres Naam",
   "No contacts": "Geen Contactgegevens",
