--- a/assets/languages/pl.json
+++ b/assets/languages/pl.json
@@ -159,8 +159,7 @@
   "Click address to copy": "Kliknij w adres zeby skopiować",
   "Back": "Wróć",
   "Their addresses": "Ich Adresy",
-  "%{count} address": "%{licz} adres",
-  "%{count} addresses": "%{licz} adresy",
+  "%{count} address |||| %{count} addresses": "%{licz} adres |||| %{licz} adresy",
   "Addresses": "Adresy",
   "Enter address name": "Wpisz nazwe adresu",
   "No contacts": "Brak kontaktów ",
