--- a/assets/languages/pt.json
+++ b/assets/languages/pt.json
@@ -159,8 +159,7 @@
   "Click address to copy": "Clique no endereço para copiar",
   "Back": "Voltar",
   "Their addresses": "Seus endereços",
-  "%{count} address": "%{count} endereço",
-  "%{count} addresses": "%{count} endereços",
+  "%{count} address |||| %{count} addresses": "%{count} endereço |||| %{count} endereços",
   "Addresses": "Endereços",
   "Enter address name": "Digite o nome do endereço",
   "No contacts": "Sem contatos",
