--- a/assets/languages/ru.json
+++ b/assets/languages/ru.json
@@ -159,8 +159,7 @@
   "Click address to copy": "копия",
   "Back": "назад",
   "Their addresses": "Их адреса",
-  "%{count} address": null,
-  "%{count} addresses": null,
+  "%{count} address |||| %{count} addresses": null,
   "Addresses": "Адреса",
   "Enter address name": "Введите имя адреса",
   "No contacts": "Нет контактов",
