--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -207,6 +207,7 @@
   "Key Management": null,
   "Label (optional)": null,
   "Language": "Sprache",
+  "Last updated\n%{time}": null,
   "Light": "Light",
   "Local Time": "Ortszeit",
   "Log in now": "Jetzt einloggen",
