--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -207,6 +207,7 @@
   "Key Management": null,
   "Label (optional)": "Label (opcional)",
   "Language": "Idioma",
+  "Last updated\n%{time}": null,
   "Light": "Light",
   "Local Time": "Hora local",
   "Log in now": "Inicie sesión ahora",
