--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -207,6 +207,7 @@
   "Key Management": null,
   "Label (optional)": "Étiquette (optionnel)",
   "Language": "Langue",
+  "Last updated\n%{time}": null,
   "Light": "Clair",
   "Local Time": "Heure locale",
   "Log in now": "Se connecter maintenant",
