--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -207,6 +207,7 @@
   "Key Management": null,
   "Label (optional)": null,
   "Language": "언어",
+  "Last updated\n%{time}": null,
   "Light": null,
   "Local Time": "현지 시각",
   "Log in now": null,
