--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -207,6 +207,7 @@
   "Key Management": null,
   "Label (optional)": null,
   "Language": "Taal",
+  "Last updated\n%{time}": null,
   "Light": null,
   "Local Time": "Locale Tijd",
   "Log in now": null,
