--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -207,6 +207,7 @@
   "Key Management": null,
   "Label (optional)": "Opis (opcjonalnie)",
   "Language": "Język",
+  "Last updated\n%{time}": null,
   "Light": "Jasny",
   "Local Time": "Czas lokalny",
   "Log in now": "Zaloguj sie teraz",
