--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -207,6 +207,7 @@
   "Key Management": null,
   "Label (optional)": "Label (opcional)",
   "Language": "Idioma",
+  "Last updated\n%{time}": null,
   "Light": "Claro",
   "Local Time": "Hora Local",
   "Log in now": "Conetar agora",
