--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -207,6 +207,7 @@
   "Key Management": null,
   "Label (optional)": null,
   "Language": "язык",
+  "Last updated\n%{time}": null,
   "Light": null,
   "Local Time": "Местное время",
   "Log in now": null,
