--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -207,6 +207,7 @@
   "Key Management": null,
   "Label (optional)": null,
   "Language": "言語",
+  "Last updated\n%{time}": null,
   "Light": null,
   "Local Time": "現地時間",
   "Log in now": null,
