Fixed those 2 previous spelling mistakes in all the translation files.
Former-commit-id: 63de8999bdc25f8cabd2fb06ce4726106eb6e95a

--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -66,7 +66,7 @@
   "Check wallet": null,
   "Check wallet failed": null,
   "Check wallet pass": null,
-  "Check wallet's integerty": null,
+  "Check wallet's integrity": null,
   "Checking for Updates...": null,
   "Checking module": null,
   "Checking sync status": null,
@@ -190,7 +190,7 @@
   "Import": "Importieren",
   "Import custom theme": "Design auswählen",
   "Import private key": "Private Key importieren",
-  "Incorrect passsword": "Falsches Passwort",
+  "Incorrect password": "Falsches Passwort",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
