--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -66,7 +66,7 @@
   "Check wallet": "Revisar billetera",
   "Check wallet failed": "Falló el control de la billetera",
   "Check wallet pass": "Comprobar el pase de la billetera",
-  "Check wallet's integerty": "Comprobar la integridad de la billetera",
+  "Check wallet's integrity": "Comprobar la integridad de la billetera",
   "Checking for Updates...": null,
   "Checking module": null,
   "Checking sync status": null,
