--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -66,7 +66,7 @@
   "Check wallet": null,
   "Check wallet failed": null,
   "Check wallet pass": null,
-  "Check wallet's integerty": null,
+  "Check wallet's integrity": null,
   "Checking for Updates...": null,
   "Checking module": null,
   "Checking sync status": null,
@@ -190,7 +190,7 @@
   "Import": null,
   "Import custom theme": null,
   "Import private key": "개인 키 가져 오기",
-  "Incorrect passsword": "잘못된 비밀번호",
+  "Incorrect password": "잘못된 비밀번호",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
