--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -66,7 +66,7 @@
   "Check wallet": "Sprawdż portfel",
   "Check wallet failed": "Sprawdzanie portfela nie powiodło sie",
   "Check wallet pass": "  sprawdzanie portfela zakończone  pomyślnie",
-  "Check wallet's integerty": "Sprawdż integralność portfela",
+  "Check wallet's integrity": "Sprawdż integralność portfela",
   "Checking for Updates...": null,
   "Checking module": null,
   "Checking sync status": null,
@@ -190,7 +190,7 @@
   "Import": "Importuj",
   "Import custom theme": "Importuj niestandardowy motyw",
   "Import private key": "Importuj Klucz Prywatny",
-  "Incorrect passsword": "Nieprawidłowe hasło",
+  "Incorrect password": "Nieprawidłowe hasło",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
