--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -66,7 +66,7 @@
   "Check wallet": "Verificar carteira",
   "Check wallet failed": "Verifique se a carteira falhou",
   "Check wallet pass": "Verifique a chave da carteira",
-  "Check wallet's integerty": "Verifique a totalidade da carteira",
+  "Check wallet's integrity": "Verifique a totalidade da carteira",
   "Checking for Updates...": null,
   "Checking module": null,
   "Checking sync status": null,
@@ -190,7 +190,7 @@
   "Import": "Importar",
   "Import custom theme": "Importar tema personalizado",
   "Import private key": "Importar chave privada",
-  "Incorrect passsword": "Senha incorreta",
+  "Incorrect password": "Senha incorreta",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
