--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -66,7 +66,7 @@
   "Check wallet": null,
   "Check wallet failed": null,
   "Check wallet pass": null,
-  "Check wallet's integerty": null,
+  "Check wallet's integrity": null,
   "Checking for Updates...": null,
   "Checking module": null,
   "Checking sync status": null,
@@ -190,7 +190,7 @@
   "Import": "Importer",
   "Import custom theme": "Importer thème personnalisé",
   "Import private key": "Importer une clé privée",
-  "Incorrect passsword": "Mot de passe incorrect",
+  "Incorrect password": "Mot de passe incorrect",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
