--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -66,7 +66,7 @@
   "Check wallet": null,
   "Check wallet failed": null,
   "Check wallet pass": null,
-  "Check wallet's integerty": null,
+  "Check wallet's integrity": null,
   "Checking for Updates...": null,
   "Checking module": null,
   "Checking sync status": null,
