--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -66,7 +66,7 @@
   "Check wallet": null,
   "Check wallet failed": null,
   "Check wallet pass": null,
-  "Check wallet's integerty": null,
+  "Check wallet's integrity": null,
   "Checking for Updates...": null,
   "Checking module": null,
   "Checking sync status": null,
@@ -190,7 +190,7 @@
   "Import": "Importeer ",
   "Import custom theme": "Selecteer Thema Bestand",
   "Import private key": "Importeer Privésleutel",
-  "Incorrect passsword": "Foutief Wachtwoord",
+  "Incorrect password": "Foutief Wachtwoord",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
