--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -66,7 +66,7 @@
   "Check wallet": null,
   "Check wallet failed": null,
   "Check wallet pass": null,
-  "Check wallet's integerty": null,
+  "Check wallet's integrity": null,
   "Checking for Updates...": null,
   "Checking module": null,
   "Checking sync status": null,
@@ -190,7 +190,7 @@
   "Import": null,
   "Import custom theme": null,
   "Import private key": "Импорт частного ключа",
-  "Incorrect passsword": "Неверный пароль",
+  "Incorrect password": "Неверный пароль",
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
