--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -4,7 +4,6 @@
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(Pending)": "(Ausstehend)",
   "(This will restart your Core)": null,
-  "* - $ / & * | < >": null,
   "24hr Change": "Wertentwicklung 24h",
   "A contact with the same name already exists.": null,
   "A module with the same directory name already exists": null,
@@ -293,8 +292,7 @@
   "PENDING TRANSACTION": "AUSSTEHENDE TRANSAKTION",
   "Page": "Seite",
   "Password": "Passwort",
-  "Password cannot contain these characters:": null,
-  "Password cannot contain these characters: - $ / & * | < >": "Passwort darf folgende Zeichen nicht enthalten: - $ / & * | < >",
+  "Password cannot contain these characters:": "Passwort darf folgende Zeichen nicht enthalten:",
   "Password cannot start or end with spaces": "Das Passwort darf nicht mit einem Leerzeichen beginnen oder enden",
   "Password configured for manual Core.": "Passwort für den manuellen Daemon konfiguriert",
   "Password has been changed.": "Das Passwort wurde geändert",
@@ -346,7 +344,6 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": "Starte Daemon neu...",
   "Rows": "Zeilen",
-  "SET TIMEOUT FOR LOGIN": null,
   "Sample Address": null,
   "Save changes": null,
   "Search address": null,
@@ -371,6 +368,7 @@
   "Send to": "Send nach",
   "Send transaction?": "Transaktion senden?",
   "Sent": "Versendet",
+  "Set timeout for login": null,
   "Settings": "Einstellungen",
   "Source code": null,
   "Stake": null,
