--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -4,7 +4,6 @@
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(Pending)": "(Pendiente)",
   "(This will restart your Core)": null,
-  "* - $ / & * | < >": null,
   "24hr Change": "24hr Change",
   "A contact with the same name already exists.": "Ya existe un contacto con el mismo nombre.",
   "A module with the same directory name already exists": null,
@@ -190,7 +189,7 @@
   "Import": "Importar",
   "Import custom theme": "Importar tema personalizado",
   "Import private key": "Importar clave privada",
-  "Incorrect passsword": "Contraseña incorrecta",
+  "Incorrect password": null,
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
@@ -293,8 +292,7 @@
   "PENDING TRANSACTION": "TRANSACCIÓN PENDIENTE",
   "Page": "Página",
   "Password": "Contraseña",
-  "Password cannot contain these characters:": null,
-  "Password cannot contain these characters: - $ / & * | < >": "La contraseña no puede contener estos caracteres: - $ / & * | <>",
+  "Password cannot contain these characters:": "La contraseña no puede contener estos caracteres:",
   "Password cannot start or end with spaces": "La contraseña no puede comenzar ni terminar con espacios",
   "Password configured for manual Core.": "Contraseña configurada para el daemon manual",
   "Password has been changed.": "La contraseña se ha cambiado.",
@@ -346,7 +344,6 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": "Reiniciando el demonio ...",
   "Rows": "Filas",
-  "SET TIMEOUT FOR LOGIN": null,
   "Sample Address": null,
   "Save changes": "Guardar cambios",
   "Search address": null,
@@ -371,6 +368,7 @@
   "Send to": "Enviar a",
   "Send transaction?": "Enviar transacción?",
   "Sent": "Enviado",
+  "Set timeout for login": null,
   "Settings": "Configuración",
   "Source code": null,
   "Stake": "Estaca",
