--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -4,7 +4,6 @@
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(Pending)": "(En attente)",
   "(This will restart your Core)": null,
-  "* - $ / & * | < >": null,
   "24hr Change": "Changement en 24h",
   "A contact with the same name already exists.": "Un contact avec le même nom existe déjà",
   "A module with the same directory name already exists": null,
@@ -293,8 +292,7 @@
   "PENDING TRANSACTION": "TRANSACTIONS EN ATTENTE",
   "Page": "Page",
   "Password": "Mot de passe",
-  "Password cannot contain these characters:": null,
-  "Password cannot contain these characters: - $ / & * | < >": "Le mot de passe ne peut pas contenir les caractères suivants: - $ / & * | < >",
+  "Password cannot contain these characters:": "Le mot de passe ne peut pas contenir les caractères suivants:",
   "Password cannot start or end with spaces": "Le mot de passe ne peut pas débuter ou terminer par un espace",
   "Password configured for manual Core.": "Mot de passe configuré pour le daemon manuel",
   "Password has been changed.": "Le mot de passe a été changé",
@@ -346,7 +344,6 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": "Redémarrage du daemon...",
   "Rows": "Rangées",
-  "SET TIMEOUT FOR LOGIN": null,
   "Sample Address": null,
   "Save changes": "Sauvegarder changements",
   "Search address": null,
@@ -371,6 +368,7 @@
   "Send to": "Envoyer vers",
   "Send transaction?": "Envoyer la transaction?",
   "Sent": "Envoyé",
+  "Set timeout for login": null,
   "Settings": "Réglages",
   "Source code": null,
   "Stake": null,
