--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -4,7 +4,6 @@
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(Pending)": "（保留中)",
   "(This will restart your Core)": null,
-  "* - $ / & * | < >": null,
   "24hr Change": "24時間の変更",
   "A contact with the same name already exists.": null,
   "A module with the same directory name already exists": null,
@@ -190,7 +189,7 @@
   "Import": null,
   "Import custom theme": null,
   "Import private key": "秘密鍵をインポートする",
-  "Incorrect passsword": "不正なパスワード",
+  "Incorrect password": null,
   "Install Module": null,
   "Install it later": null,
   "Installing Module...": null,
@@ -294,7 +293,6 @@
   "Page": "ページ",
   "Password": "パスワード",
   "Password cannot contain these characters:": null,
-  "Password cannot contain these characters: - $ / & * | < >": null,
   "Password cannot start or end with spaces": null,
   "Password configured for manual Core.": "手動デーモン用に設定されたパスワード",
   "Password has been changed.": "パスワードが変更されました",
@@ -346,7 +344,6 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
   "Rows": "行",
-  "SET TIMEOUT FOR LOGIN": null,
   "Sample Address": null,
   "Save changes": null,
   "Search address": null,
@@ -371,6 +368,7 @@
   "Send to": null,
   "Send transaction?": "トランザクションを送信しますか？",
   "Sent": "送信済み",
+  "Set timeout for login": null,
   "Settings": "設定",
   "Source code": null,
   "Stake": null,
