--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -4,7 +4,6 @@
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(Pending)": "(In afwachting)",
   "(This will restart your Core)": null,
-  "* - $ / & * | < >": null,
   "24hr Change": "24hr verandering",
   "A contact with the same name already exists.": null,
   "A module with the same directory name already exists": null,
@@ -294,7 +293,6 @@
   "Page": "Pagina",
   "Password": "Wachtwoord",
   "Password cannot contain these characters:": null,
-  "Password cannot contain these characters: - $ / & * | < >": null,
   "Password cannot start or end with spaces": null,
   "Password configured for manual Core.": "Wachtwoord geconfigureerd voor handmatige daemon",
   "Password has been changed.": "Wachtwoord werd aangepast",
@@ -346,7 +344,6 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
   "Rows": "Rijen",
-  "SET TIMEOUT FOR LOGIN": null,
   "Sample Address": null,
   "Save changes": null,
   "Search address": null,
@@ -371,6 +368,7 @@
   "Send to": "Verzend Naar",
   "Send transaction?": "Transactie verzenden?",
   "Sent": "Verzenden",
+  "Set timeout for login": null,
   "Settings": "Instellingen",
   "Source code": null,
   "Stake": null,
