--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -4,7 +4,6 @@
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(Pending)": "(Oczekuje)",
   "(This will restart your Core)": null,
-  "* - $ / & * | < >": null,
   "24hr Change": "Różnica ceny w okresie 24 g.",
   "A contact with the same name already exists.": "Kontakt o tej nazwie juz istnieje.",
   "A module with the same directory name already exists": null,
@@ -293,8 +292,7 @@
   "PENDING TRANSACTION": "TRANSAKCJE OCZEKUJACE",
   "Page": "Strona",
   "Password": "Hasło",
-  "Password cannot contain these characters:": null,
-  "Password cannot contain these characters: - $ / & * | < >": "Hasło nie może zawierać tych znaków: - $ / & * | < >",
+  "Password cannot contain these characters:": "Hasło nie może zawierać tych znaków:",
   "Password cannot start or end with spaces": "Hasło nie może zaczynać się i kończyć spacją",
   "Password configured for manual Core.": "Hasło skonfigurowane dla manual daemon.",
   "Password has been changed.": "Hasło zostało zmienione.",
@@ -346,7 +344,6 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": "Restartowanie  daemona...",
   "Rows": "Rzad",
-  "SET TIMEOUT FOR LOGIN": null,
   "Sample Address": null,
   "Save changes": "Zapisz zmiany",
   "Search address": null,
@@ -371,6 +368,7 @@
   "Send to": "Wyślij do",
   "Send transaction?": "Wysłać transakcje?",
   "Sent": "Wyslij",
+  "Set timeout for login": null,
   "Settings": "Ustawienia",
   "Source code": null,
   "Stake": "Stawka",
