--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -4,7 +4,6 @@
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(Pending)": "(Pendente)",
   "(This will restart your Core)": null,
-  "* - $ / & * | < >": null,
   "24hr Change": "Mudança nas 24hrs ",
   "A contact with the same name already exists.": "Já existe um contato com o mesmo nome",
   "A module with the same directory name already exists": null,
@@ -293,8 +292,7 @@
   "PENDING TRANSACTION": "TRANSAÇãO PENDENTE",
   "Page": "Página",
   "Password": "Senha",
-  "Password cannot contain these characters:": null,
-  "Password cannot contain these characters: - $ / & * | < >": "A senha não pode conter estes caracteres: - $ / & * | <>",
+  "Password cannot contain these characters:": "A senha não pode conter estes caracteres:",
   "Password cannot start or end with spaces": "A senha não pode iniciar ou terminar com espaços",
   "Password configured for manual Core.": "Senha configurada para daemon manual.",
   "Password has been changed.": "A senha foi alterada.",
@@ -346,7 +344,6 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": "A reiniciar o daemon...",
   "Rows": "Linhas",
-  "SET TIMEOUT FOR LOGIN": null,
   "Sample Address": null,
   "Save changes": "Salvar alterações",
   "Search address": null,
@@ -371,6 +368,7 @@
   "Send to": "Enviar para",
   "Send transaction?": "Enviar transação?",
   "Sent": "Enviado",
+  "Set timeout for login": null,
   "Settings": "Configurações",
   "Source code": null,
   "Stake": "Stake",
