--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -4,7 +4,6 @@
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(Pending)": "(В ожидании)",
   "(This will restart your Core)": null,
-  "* - $ / & * | < >": null,
   "24hr Change": "24 часа смены",
   "A contact with the same name already exists.": null,
   "A module with the same directory name already exists": null,
@@ -294,7 +293,6 @@
   "Page": "страница",
   "Password": "пароль",
   "Password cannot contain these characters:": null,
-  "Password cannot contain these characters: - $ / & * | < >": null,
   "Password cannot start or end with spaces": null,
   "Password configured for manual Core.": "Пароль, настроенный для ручного демона",
   "Password has been changed.": "пароль был изменен",
@@ -346,7 +344,6 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
   "Rows": "Ряды",
-  "SET TIMEOUT FOR LOGIN": null,
   "Sample Address": null,
   "Save changes": null,
   "Search address": null,
@@ -371,6 +368,7 @@
   "Send to": null,
   "Send transaction?": "Отправить транзакцию?",
   "Sent": "Sent",
+  "Set timeout for login": null,
   "Settings": "настройки",
   "Source code": null,
   "Stake": null,
