--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -4,7 +4,6 @@
   "%{smart_count} address |||| %{smart_count} addresses": null,
   "(Pending)": "(대기 중)",
   "(This will restart your Core)": null,
-  "* - $ / & * | < >": null,
   "24hr Change": "24 시간 변경",
   "A contact with the same name already exists.": null,
   "A module with the same directory name already exists": null,
@@ -294,7 +293,6 @@
   "Page": "페이지",
   "Password": "암호",
   "Password cannot contain these characters:": null,
-  "Password cannot contain these characters: - $ / & * | < >": null,
   "Password cannot start or end with spaces": null,
   "Password configured for manual Core.": "수동 데몬 용으로 구성된 암호",
   "Password has been changed.": "비밀번호가 변경되었습니다.",
@@ -346,7 +344,6 @@
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
   "Rows": "행",
-  "SET TIMEOUT FOR LOGIN": null,
   "Sample Address": null,
   "Save changes": null,
   "Search address": null,
@@ -371,6 +368,7 @@
   "Send to": null,
   "Send transaction?": "거래를 보내시겠습니까?",
   "Sent": "전송 됨",
+  "Set timeout for login": null,
   "Settings": "설정",
   "Source code": null,
   "Stake": null,
